--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GitHub Intro</string>
+    <string name="welcome_to_git">Welcome To Git!</string>
 </resources>
